fix: se corrige el calculo de días consecutivos